--- a/oracle-jdk8/Dockerfile
+++ b/oracle-jdk8/Dockerfile
@@ -21,8 +21,10 @@ RUN rngd -r /dev/urandom
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
-RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x1-cross-signed.crt -alias lets-encrypt-x1-cross-signed -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
-RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x2-cross-signed.crt -alias lets-encrypt-x2-cross-signed -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
-RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x3-cross-signed.crt -alias lets-encrypt-x3-cross-signed -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
-RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x4-cross-signed.crt -alias lets-encrypt-x4-cross-signed -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
-RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/IdenTrust-root.crt -alias IdenTrust-root -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/isrgrootx1.crt -alias isrgrootx1 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/isrg-root-x2.crt -alias isrg-root-x2 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-e1.crt -alias lets-encrypt-e1 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-e2.crt -alias lets-encrypt-e2 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-r3.crt -alias lets-encrypt-r3 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-r4.crt -alias lets-encrypt-r4 -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
+RUN printf 'changeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-r4-cross-signed.crt -alias lets-encrypt-r4-cross-signed -keystore /usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
