--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -5,7 +5,8 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 #ARG ANSIBLE_VERSION=2.7.8.0
 #ARG ANSIBLE_VERSION=2.7.16
 #ARG ANSIBLE_VERSION=2.9.17
-ARG ANSIBLE_VERSION=2.9.6
+#ARG ANSIBLE_VERSION=2.9.6
+ARG ANSIBLE_VERSION=2.9.17
 #ARG TERRAFORM_VERSION=0.11.11
 ARG TERRAFORM_VERSION=0.12.24
 
