--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -4,9 +4,8 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 #ARG ANSIBLE_VERSION=2.8.1.0
 #ARG ANSIBLE_VERSION=2.7.8.0
 #ARG ANSIBLE_VERSION=2.7.16
+ARG ANSIBLE_VERSION=2.9.6
 #ARG ANSIBLE_VERSION=2.9.17
-#ARG ANSIBLE_VERSION=2.9.6
-ARG ANSIBLE_VERSION=2.9.17
 #ARG TERRAFORM_VERSION=0.11.11
 ARG TERRAFORM_VERSION=0.12.24
 
@@ -23,7 +22,7 @@ ADD openstack.txt openstack.txt
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python3-pip wget unzip && pip install jinja2 hvac ansible-modules-hashivault yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario && pip install -r openstack.txt
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python3-pip wget unzip && pip3 install jinja2 hvac ansible-modules-hashivault yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario && pip3 install -r openstack.txt
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
