--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -22,6 +22,7 @@ ADD openstack.txt openstack.txt
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python3-pip wget unzip && pip3 install jinja2 hvac ansible-modules-hashivault yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario && pip3 install -r openstack.txt
 COPY letsencrypt /usr/local/share/ca-certificates/
