--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -8,7 +8,8 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 #ARG ANSIBLE_VERSION=2.9.0
 ARG ANSIBLE_VERSION=2.9.17
 #ARG TERRAFORM_VERSION=0.11.11
-ARG TERRAFORM_VERSION=0.15.1
+ARG TERRAFORM_VERSION=0.13.7
+# ARG TERRAFORM_VERSION=0.15.1
 
 ARG KUBECTL_VERSION=v1.20.2
 #ARG HELM_VERSION=v2.14.3
