--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -25,10 +25,11 @@ ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python-pip wget unzip
-RUN pip install jinja2 hvac ansible-modules-hashivault yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario
-RUN pip install openstack-requirements
-RUN pip install -r openstack.txt
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python3-pip wget unzip
+#RUN pip install ansible==${ANSIBLE_VERSION} jinja2 hvac ansible-modules-hashivault yasha os_client_config shade notario
+RUN pip3 install ansible==${ANSIBLE_VERSION} jinja2 pbr ansible-modules-hashivault hvac ansible-modules-hashivault netaddr yasha os_client_config==1.28.0 shade==1.32.0
+RUN pip3 install openstack-requirements
+#RUN pip install -r openstack.txt
 #RUN pip install python-openstackclient
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
