--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -31,9 +31,9 @@ RUN apt update && apt -y install python2
 RUN curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
 RUN python2 get-pip.py
 RUN pip install jinja2 hvac ansible-modules-hashivault netaddr yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario
-#RUN pip install openstack-requirements
-RUN pip install -r openstack.txt
+RUN pip install openstack-requirements
 RUN pip install python-openstackclient
+RUN pip install -r openstack.txt
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
