--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -31,6 +31,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-g
 #RUN curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
 #RUN python2 get-pip.py
 RUN apt -y install python3 python3-pip
+#RUN alias python=python3 && echo "alias python=python3" >>/etc/profile
+RUN ln -s /usr/bin/python3 /usr/bin/python
 RUN pip3 install jinja2 hvac ansible-modules-hashivault netaddr yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario
 RUN pip3 install openstack-requirements
 RUN pip3 install python-openstackclient
