--- a/openjdk-12-maven/Dockerfile
+++ b/openjdk-12-maven/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 ARG MAVEN_VERSION=3.6.3
 ENV MAVEN_HOME /usr/share/maven
 
-ARG GRADLE_VERSION=7.0.1
+ARG GRADLE_VERSION=7.1
 ENV GRADLE_HOME /usr/share/gradle
 
 RUN \
@@ -16,5 +16,6 @@ RUN \
 RUN \
   mkdir -p "${GRADLE_HOME}" && \
   curl -kfsSL -o gradle-${GRADLE_VERSION}-bin.zip https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip  && \
-  unzip gradle-${GRADLE_VERSION}-bin.zip "gradle-${GRADLE_VERSION}/*" -d "${GRADLE_HOME}" && \
+  unzip gradle-${GRADLE_VERSION}-bin.zip && \
+  mv gradle-${GRADLE_VERSION}/* ${GRADLE_HOME}/ &&
   ln -s "${GRADLE_HOME}"/bin/gradle /usr/bin/gradle
